# windeurope72hours-elevations-populator

./: .gitignore  .pre-commit-config.yaml  README.md  app_configuration.json  octue.yaml  plot_elevations.py  pyproject.toml  setup.cfg  twine.json
.github/workflows/: cd.yaml  ci.yaml  release.yml  semantic.yml  update-pull-request.yml
elevations_populator/: app.py  cells.py  exceptions.py  storage.py  tiles.py  utils.py
scripts/: create_copernicus_data_source.py  get_elevations.py  plot_elevations.py  run_app_locally.py
terraform/: iam.tf  main.tf  secrets.tf  storage.tf  variables.tf
tests/: test_app.py  test_cells.py  test_deployment.py  test_tiles.py
