[tool.poetry]
name = "elevations-populator"
version = "0.2.2"
description = ""
authors = ["Marcus Lugg <marcus@octue.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "elevations_populator"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
octue = "0.46.0"
boto3 = "^1.26.92"
h3 = {version = "^3.7.6", extras = ["numpy"]}
rasterio = "^1.3.6"
neo4j = "^5.7.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.poetry.group.plotting.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
coverage = "^7.2.2"
shapely = "^2.0.1"
geopandas = "^0.12.2"
geojson = "^3.0.1"
plotly = "^5.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
